# crab-chat

./: Cargo.toml  recipes.json
crates/crab-chat-peer/: Cargo.toml
crates/crab-chat-peer/src/: command.rs  lib.rs  peer.rs
crates/crab-chat-ui/: .envrc  Cargo.toml  LICENSE  README.md
crates/crab-chat-ui/.config/: config.json5
crates/crab-chat-ui/.github/workflows/: cd.yml
crates/crab-chat-ui/src/: action.rs  app.rs  components.rs  config.rs  main.rs
crates/crab-chat-ui/src/components/: home.rs  rooms_popup.rs
crates/crab-chat-ui/src/components/home/: chat.rs  header.rs  mod.rs  models.rs  rooms.rs
crates/peer/: Cargo.toml
crates/peer/src/: bootstrap_address.rs  command.rs  event.rs  lib.rs  peer.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  event.rs  handler.rs  tui.rs  ui.rs
src/: cli.rs  command.rs  lib.rs  main.rs  recipes.rs
src/app/: app.rs  chat.rs  mod.rs
src/peer/: command.rs  command_bus.rs  error.rs  event.rs  message.rs  mod.rs  peer.rs
src/recipes/peer/: mod.rs
src/ui/: app.rs  mod.rs  ui.rs
tests/: intial.rs
trash/_app/: app.rs
trash/_recipes/: mod.rs
trash/_recipes/peer/: command.rs  message.rs
