[package]
name = "crab-chat-ui"
version = "0.1.0"
edition = "2024"


[dependencies]
crab-chat-peer = { path = "../peer" }
libp2p = { version = "0.55.0", features = [
    "tokio",
    "tcp",
    "mdns",
    "noise",
    "yamux",
    "floodsub",
    "gossipsub",
    "ping",
    "kad",
] }
tokio = { version = "1.43.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"
libp2p-swarm-derive = "0.35.0"
async-trait = "0.1.87"
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
uuid = { version = "1.15.1", features = ["fast-rng", "v4", "serde"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
dotenvy = "0.15.7"
thiserror = "2.0.12"
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
tap = "1.0.1"
derive-getters = "0.5.0"
bon = "3.4.0"
chrono = "0.4.40"
tui-textarea = { version = "0.7.0", features = ["ratatui"] }


[build-dependencies]
anyhow = "1"
